--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
-{}
+{
+	"tabWidth": 2,
+	"printWidth": 120,
+	"singleQuote": true,
+	"jsxSingleQuote": false,
+	"trailingComma": "none",
+	"arrowParens": "avoid"
+}
